add_library(lovok_internal
        log.cpp
        lovok.cpp
        lovok_handle_internal.cpp
        boxes/box.cpp
        boxes/box.h
        boxes/file_type_box.cpp
        boxes/file_type_box.h
        boxes/sample_to_chunk_box.h
        boxes/sample_to_chunk_box.cpp
        boxes/sample_size_box.h
        boxes/sample_size_box.cpp
        boxes/meta_box.h
        boxes/meta_box.cpp
        boxes/full_box.h
        boxes/full_box.cpp
        boxes/movie_box.h
        boxes/movie_box.cpp
        boxes/movie_fragment_random_access_box.h
        boxes/movie_fragment_random_access_box.cpp
        boxes/movie_header_box.h
        boxes/movie_header_box.cpp
        boxes/progressive_download_info_box.cpp
        boxes/progressive_download_info_box.h
        boxes/movie_fragment_box.cpp
        boxes/movie_fragment_box.h
        boxes/media_data_box.h
        boxes/media_data_box.cpp
        boxes/time_to_sample_box.h
        boxes/time_to_sample_box.cpp
        lovok_handle_internal.h
        boxes/file_level_boxes.h
        boxes/file_level_boxes.cpp
        boxes/moov_sub_boxes.h
        boxes/moov_sub_boxes.cpp
        boxes/trak_sub_boxes.cpp
        boxes/trak_sub_boxes.h
        boxes/edts_sub_boxes.cpp
        boxes/edts_sub_boxes.h
        boxes/mdia_sub_boxes.cpp
        boxes/mdia_sub_boxes.h
        boxes/minf_sub_boxes.cpp
        boxes/minf_sub_boxes.h
        boxes/dinf_sub_boxes.cpp
        boxes/dinf_sub_boxes.h
        boxes/stbl_sub_boxes.cpp
        boxes/stbl_sub_boxes.h
        boxes/mvex_sub_boxes.cpp
        boxes/mvex_sub_boxes.h
        boxes/moof_sub_boxes.cpp
        boxes/moof_sub_boxes.h
        boxes/traf_sub_boxes.cpp
        boxes/traf_sub_boxes.h
        boxes/meta_sub_boxes.cpp
        boxes/meta_sub_boxes.h
        boxes/ipro_sub_boxes.cpp
        boxes/ipro_sub_boxes.h
        boxes/sinf_sub_boxes.cpp
        boxes/sinf_sub_boxes.h
        boxes/fiin_sub_boxes.cpp
        boxes/fiin_sub_boxes.h
        boxes/paen_sub_boxes.cpp
        boxes/paen_sub_boxes.h
        boxes/mfra_sub_boxes.cpp
        boxes/mfra_sub_boxes.h
        boxes/skip_sub_boxes.cpp
        boxes/skip_sub_boxes.h
        boxes/skipudta_sub_boxes.cpp
        boxes/skipudta_sub_boxes.h
        boxes/strk_sub_boxes.cpp
        boxes/strk_sub_boxes.h
        boxes/meco_sub_boxes.cpp
        boxes/meco_sub_boxes.h
        boxes/mere_sub_boxes.cpp
        boxes/mere_sub_boxes.h)

target_link_libraries(lovok_internal file_io)
