add_library(lovok_internal
        lovok.cpp
        lovok_handle_internal.cpp
        boxes/box.cpp
        boxes/box.h
        lovok_handle_internal.h
        boxes/file_level_boxes.h
        boxes/file_level_boxes.cpp
        boxes/moov_sub_boxes.h
        boxes/moov_sub_boxes.cpp
        boxes/trak_sub_boxes.cpp
        boxes/trak_sub_boxes.h
        boxes/edts_sub_boxes.cpp
        boxes/edts_sub_boxes.h
        boxes/mdia_sub_boxes.cpp
        boxes/mdia_sub_boxes.h
        boxes/minf_sub_boxes.cpp
        boxes/minf_sub_boxes.h
        boxes/dinf_sub_boxes.cpp
        boxes/dinf_sub_boxes.h
        boxes/stbl_sub_boxes.cpp
        boxes/stbl_sub_boxes.h
        boxes/mvex_sub_boxes.cpp
        boxes/mvex_sub_boxes.h
        boxes/moof_sub_boxes.cpp
        boxes/moof_sub_boxes.h
        boxes/traf_sub_boxes.cpp
        boxes/traf_sub_boxes.h
        boxes/meta_sub_boxes.cpp
        boxes/meta_sub_boxes.h
        boxes/ipro_sub_boxes.cpp
        boxes/ipro_sub_boxes.h
        boxes/sinf_sub_boxes.cpp
        boxes/sinf_sub_boxes.h
        boxes/fiin_sub_boxes.cpp
        boxes/fiin_sub_boxes.h
        boxes/paen_sub_boxes.cpp
        boxes/paen_sub_boxes.h
        boxes/mfra_sub_boxes.cpp
        boxes/mfra_sub_boxes.h
        boxes/skip_sub_boxes.cpp
        boxes/skip_sub_boxes.h
        boxes/skipudta_sub_boxes.cpp
        boxes/skipudta_sub_boxes.h
        boxes/strk_sub_boxes.cpp
        boxes/strk_sub_boxes.h
        boxes/meco_sub_boxes.cpp
        boxes/meco_sub_boxes.h
        boxes/mere_sub_boxes.cpp
        boxes/mere_sub_boxes.h)

target_link_libraries(lovok_internal file_io)
